--- a/about.html
+++ b/about.html
@@ -32,7 +32,10 @@
   <nav>
     <div class="grid">
       <div class="grid__item large--one-third logo">
-          <h1><a href="index.html"><span class="loot">Loot</span><span class="junkie">Junkie</span></a></h1>
+        <h1>
+          <a href="index.html"><span class="loot">Loot</span><span class="junkie">Junkie</span></a>
+          <span class="version">reflecting patch 1.4.0</span>
+        </h1>
       </div>
       <div class="grid__item large--two-thirds medium-down--hide nav">
       	<ul>
@@ -47,7 +50,7 @@
 
   <div class="cwrapper">
     <div class="grid">
-      
+
       <div class="grid__item content">
         <h2>About LootJunkie</h2>
         <p>LootJunkie is an Overwatch loot box simulator where you can open Overwatch loot boxes for free!</p>
@@ -71,7 +74,7 @@
         </ul>
         <p>If you would like to contact me directly you can do so by emailing <a href="mailto: hello@matou.io">hello@matou.io</a> and I will get back to you as soon as I can.</p>
       </div>
-      
+
     </div>
   </div>
 
