--- a/changelog.html
+++ b/changelog.html
@@ -32,7 +32,10 @@
   <nav>
     <div class="grid">
       <div class="grid__item large--one-third logo">
-          <h1><a href="index.html"><span class="loot">Loot</span><span class="junkie">Junkie</span></a></h1>
+        <h1>
+          <a href="index.html"><span class="loot">Loot</span><span class="junkie">Junkie</span></a>
+          <span class="version">reflecting patch 1.4.0</span>
+        </h1>
       </div>
       <div class="grid__item large--two-thirds medium-down--hide nav">
       	<ul>
@@ -47,10 +50,18 @@
 
   <div class="cwrapper">
     <div class="grid">
-      
+
       <div class="grid__item content">
         <h2>LootJunkie Changelog</h2>
         <p>Here you will find the latest additions to the LootJunkie site. </p>
+
+        <h3><strong>November 6, 2016</strong></h3>
+        <ul>
+          <li>Revamped Styling</li>
+          <li>Fixed text stripping issue with the word 'Legendary' (caused conflict with items)</li>
+          <li>Reorganized JS files</li>
+          <li>Updated item database</li>
+        </ul>
 
         <h3><strong>June 7, 2016</strong></h3>
         <ul>
@@ -66,7 +77,7 @@
         </ul>
         <p>Please note this page isn't always 100% up-to-date.</p>
       </div>
-    
+
     </div>
   </div>
 
