--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
   <nav>
     <div class="grid">
       <div class="grid__item large--one-third logo">
-          <h1><a href="index.html"><span class="loot">Loot</span><span class="junkie">Junkie</span></a></h1>
+          <h1>
+            <a href="index.html"><span class="loot">Loot</span><span class="junkie">Junkie</span></a>
+            <span class="version">reflecting patch 1.4.0</span>
+          </h1>
       </div>
       <div class="grid__item large--two-thirds medium-down--hide nav">
       	<ul>
@@ -48,16 +51,23 @@
 
   <div class="wrapper">
     <div class="grid">
-      
       <div class="grid__item item-section">
         <img id="box" src="images/loot-box.png" alt="Loot Box">
         <ul id="crate"></ul>
       </div>
+    </div>
+  </div>
+
+  <div class="small-wrapper">
+    <div class="grid">
       <div class="grid__item center">
         <a class="btn yellow" onclick="openBox()" onmouseover="shakeBox()">OPEN LOOT BOX</a>
         <a class="btn blue" href="https://us.battle.net/shop/en/product/overwatch-loot-box" target="_blank">SHOP <i class="fa fa-external-link" aria-hidden="true"></i></a>
       </div>
-    
+
+      <div class="grid__item center">
+        <div class="note"><i class="fa fa-flag" aria-hidden="true"></i> Seasonal Loot Boxes will not appear in results.</div>
+      </div>
     </div>
   </div>
 
