--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
       	<ul>
       	  <li><a href="about.html">About</a></li>
       	  <li><a href="changelog.html">Changelog</a></li>
-          <li><a href="https://twitter.com/omgmrm">Twitter</a></li>
+          <li><a href="https://twitter.com/lootjunkiexyz">Twitter</a></li>
         </ul>
       </div>
     </div>
