--- a/changelog.html
+++ b/changelog.html
@@ -41,7 +41,7 @@
       	<ul>
       	  <li><a href="about.html">About</a></li>
       	  <li><a href="changelog.html">Changelog</a></li>
-          <li><a href="https://twitter.com/omgmrm">Twitter</a></li>
+          <li><a href="https://twitter.com/lootjunkiexyz">Twitter</a></li>
         </ul>
       </div>
     </div>
@@ -54,6 +54,14 @@
       <div class="grid__item content">
         <h2>LootJunkie Changelog</h2>
         <p>Here you will find the latest additions to the LootJunkie site. </p>
+
+        <h3><strong>November 16, 2016</strong></h3>
+        <ul>
+          <li>Added Sombra to the item pool</li>
+          <li>Added new twitter handle</li>
+          <li>Updated notifications</li>
+          <li>Improved mobile experience</li>
+        </ul>
 
         <h3><strong>November 6, 2016</strong></h3>
         <ul>
