--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       	<ul>
       	  <li><a href="about.html">About</a></li>
       	  <li><a href="changelog.html">Changelog</a></li>
-          <li><a href="https://twitter.com/omgmrm">Twitter</a></li>
+          <li><a href="https://twitter.com/lootjunkiexyz">Twitter</a></li>
         </ul>
       </div>
     </div>
@@ -66,7 +66,7 @@
       </div>
 
       <div class="grid__item center">
-        <div class="note"><i class="fa fa-flag" aria-hidden="true"></i> Seasonal Loot Boxes will not appear in results.</div>
+        <div class="note"><i class="fa fa-twitter" aria-hidden="true"></i> We have a dedicated twitter now! Follow <a href="https://twitter.com/lootjunkiexyz" target="_blank">@LootJunkiexyz</a></div>
       </div>
     </div>
   </div>
