Updated mobile experience and general styling

--- a/changelog.html
+++ b/changelog.html
@@ -58,6 +58,7 @@
         <h3><strong>March 18, 2016</strong></h3>
         <ul>
           <li>Added Orisa to the item pool</li>
+          <li>Improved mobile experience further</li>
           <li>Changed how items are brought in for future ease.</li>
         </ul>
 
