--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>
 
   <div class="small-wrapper">
-    <div class="grid">
+    <div class="grid mobile-button">
       <div class="grid__item center">
         <a class="btn yellow" onclick="openBox()" onmouseover="shakeBox()">OPEN LOOT BOX</a>
         <a class="btn blue" href="https://us.battle.net/shop/en/product/overwatch-loot-box" target="_blank">SHOP <i class="fa fa-external-link" aria-hidden="true"></i></a>
