--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     <div class="grid">
       <div class="grid__item large--one-third logo">
         <h1>
-          <a href="index.html"><span class="loot">Loot</span><span class="junkie">Junkie</span></a>
+          <a href="index.html" class="logo"><span class="loot">Loot</span><span class="junkie">Junkie</span></a>
           <span class="version">reflecting patch 1.10.0</span>
         </h1>
       </div>
@@ -41,7 +41,8 @@
       	<ul>
       	  <li><a href="about.html">About</a></li>
       	  <li><a href="changelog.html">Changelog</a></li>
-          <li><a href="https://twitter.com/lootjunkiexyz">Twitter</a></li>
+          <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
+          <li><a href="https://www.paypal.me/MatthewMarineau" class="donate" target="_blank">Donate</a></li>
         </ul>
       </div>
     </div>
