--- a/changelog.html
+++ b/changelog.html
@@ -33,7 +33,7 @@
     <div class="grid">
       <div class="grid__item large--one-third logo">
         <h1>
-          <a href="index.html"><span class="loot">Loot</span><span class="junkie">Junkie</span></a>
+          <a href="index.html" class="logo"><span class="loot">Loot</span><span class="junkie">Junkie</span></a>
           <span class="version">reflecting patch 1.10.0</span>
         </h1>
       </div>
@@ -41,7 +41,8 @@
       	<ul>
       	  <li><a href="about.html">About</a></li>
       	  <li><a href="changelog.html">Changelog</a></li>
-          <li><a href="https://twitter.com/lootjunkiexyz">Twitter</a></li>
+          <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
+          <li><a href="https://www.paypal.me/MatthewMarineau" class="donate" target="_blank">Donate</a></li>
         </ul>
       </div>
     </div>
@@ -60,6 +61,7 @@
           <li>Added Orisa to the item pool</li>
           <li>Improved mobile experience further</li>
           <li>Changed how items are brought in for future ease.</li>
+          <li>New visual update</li>
         </ul>
 
         <h3><strong>November 16, 2016</strong></h3>
