--- a/changelog.html
+++ b/changelog.html
@@ -14,7 +14,7 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Raleway:400,600,700' rel='stylesheet' type='text/css'>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script type="text/javascript" src="js/chance.js"></script>
+<script type="text/javascript" src="js/chance.js"></script>
 <script type="text/javascript" src="js/overloot.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -33,15 +33,16 @@
     <div class="grid">
       <div class="grid__item large--one-third logo">
         <h1>
-          <a href="index.html"><span class="loot">Loot</span><span class="junkie">Junkie</span></a>
-          <span class="version">reflecting patch 1.5.0.2</span>
+          <a href="index.html" class="logo"><span class="loot">Loot</span><span class="junkie">Junkie</span></a>
+          <span class="version">reflecting patch 1.10.0</span>
         </h1>
       </div>
       <div class="grid__item large--two-thirds medium-down--hide nav">
       	<ul>
       	  <li><a href="about.html">About</a></li>
       	  <li><a href="changelog.html">Changelog</a></li>
-          <li><a href="https://twitter.com/lootjunkiexyz">Twitter</a></li>
+          <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
+          <li><a href="https://www.paypal.me/MatthewMarineau" class="donate" target="_blank">Donate</a></li>
         </ul>
       </div>
     </div>
@@ -53,7 +54,15 @@
 
       <div class="grid__item content">
         <h2>LootJunkie Changelog</h2>
-        <p>Here you will find the latest additions to the LootJunkie site. </p>
+        <small>Current version: 3.0.1</small>
+        
+        <h3><strong>March 18, 2016</strong></h3>
+        <ul>
+          <li>Added Orisa to the item pool</li>
+          <li>Improved mobile experience further</li>
+          <li>Changed how items are brought in for future ease.</li>
+          <li>New visual update</li>
+        </ul>
 
         <h3><strong>November 16, 2016</strong></h3>
         <ul>
@@ -83,7 +92,6 @@
         <ul>
           <li>Initial Release</li>
         </ul>
-        <p>Please note this page isn't always 100% up-to-date.</p>
       </div>
 
     </div>
