--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,14 +8,16 @@
 <meta name="robots" content="index,follows" />
 <title>LootJunkie | Overwatch Loot Box Simulator</title>
 <link rel="icon" type="image/png" href="favicon.png">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type=text/css>
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <link href="css/animate.css" rel="stylesheet" type="text/css">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type=text/css>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Raleway:400,600,700' rel='stylesheet' type='text/css'>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script type="text/javascript" src="js/chance.js"></script>
-<script type="text/javascript" src="js/overloot.js"></script>
+<script type="text/javascript" src="js/loot.js"></script>
+<script type="text/javascript" src="js/spec-loot.js"></script>
+<script type="text/javascript" src="js/engine.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -34,15 +35,16 @@
     <div class="grid">
       <div class="grid__item large--one-third logo">
           <h1>
-            <a href="index.html"><span class="loot">Loot</span><span class="junkie">Junkie</span></a>
-            <span class="version">reflecting patch 1.5.0.2</span>
+            <a href="index.html" class="logo"><span class="loot">Loot</span><span class="junkie">Junkie</span></a>
+            <span class="version">reflecting patch 1.10.0</span>
           </h1>
       </div>
       <div class="grid__item large--two-thirds medium-down--hide nav">
       	<ul>
       	  <li><a href="about.html">About</a></li>
       	  <li><a href="changelog.html">Changelog</a></li>
-          <li><a href="https://twitter.com/lootjunkiexyz">Twitter</a></li>
+          <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
+          <li><a href="https://www.paypal.me/MatthewMarineau" class="donate" target="_blank">Donate</a></li>
         </ul>
       </div>
     </div>
@@ -70,7 +72,6 @@
       </div>
     </div>
   </div>
-
 
 </body>
 </html>
