Fixed donation link

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       	  <li><a href="about.html">About</a></li>
       	  <li><a href="changelog.html">Changelog</a></li>
           <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
+          <li><a href="https://streamtip.com/t/omgmrm" class="donate" target="_blank">Donate</a></li>
         </ul>
       </div>
     </div>
