Added mobile menu

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
       <div class="grid__item large--one-third logo">
         <h1>
           <a href="index.html" class="logo"><span class="loot">Loot</span><span class="junkie">Junkie</span></a>
-          <span class="version">reflecting patch 1.5.0</span>
+          <span class="version">reflecting patch 1.10.0</span>
         </h1>
       </div>
       <div class="grid__item large--two-thirds medium-down--hide nav">
@@ -53,30 +53,39 @@
     <div class="grid">
 
       <div class="grid__item content">
-        <h2>About LootJunkie</h2>
-        <p>LootJunkie is an Overwatch loot box simulator where you can open Overwatch loot boxes for free!</p>
-        <h3>How does it work?</h3>
-        <p>Using community data we have a weighted randomization set up to simulate as if you are opening a new loot box everytime.</p>
-        <p>The current averages are as follows</p>
-        <ul>
-        <li>Uncommon: 59%</li>
-        <li>Rare: 32%</li>
-        <li>Epic: 7%</li>
-        <li>Legendary: 2%</li>
-        </ul>
-        <p>Please note that all of the items are rounded and as in game you are guaranteed an item of Rare quality or higher per box.</p>
-        <h3>TODO List</h3>
-        <ul>
-          <li>Create rule to provide legendary around every 10 boxes.</li>
-          <li>Better opening animation</li>
-          <li>Better loot icons</li>
-          <li>Personal stats</li>
-          <li>Global stats</li>
-        </ul>
-        <p>If you would like to contact me directly you can do so by emailing <a href="mailto: hello@matou.io">hello@matou.io</a> and I will get back to you as soon as I can.</p>
+        <div class="content-wrap">
+          <h2>About LootJunkie</h2>
+          <p>LootJunkie is an Overwatch loot box simulator where you can open Overwatch loot boxes for free!</p>
+          <h3>How does it work?</h3>
+          <p>Using community data we have a weighted randomization set up to simulate as if you are opening a new loot box everytime.</p>
+          <p>The current averages are as follows</p>
+          <ul>
+          <li>Uncommon: 59%</li>
+          <li>Rare: 32%</li>
+          <li>Epic: 7%</li>
+          <li>Legendary: 2%</li>
+          </ul>
+          <p>Please note that all of the items are rounded and as in game you are guaranteed an item of Rare quality or higher per box.</p>
+          <h3>TODO List</h3>
+          <ul>
+            <li>Create rule to provide legendary around every 10 boxes.</li>
+            <li>Better opening animation</li>
+            <li>Better loot icons</li>
+            <li>Personal stats</li>
+            <li>Global stats</li>
+          </ul>
+          <p>If you would like to contact me directly you can do so by emailing <a href="mailto: hello@matou.io">hello@matou.io</a> and I will get back to you as soon as I can.</p>
+        </div>
       </div>
 
     </div>
+    
+    <ul class="mobile-nav">
+      <li><a href="about.html">About</a></li>
+      <li><a href="changelog.html">Changelog</a></li>
+      <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
+      <li><a href="https://streamtip.com/t/omgmrm" class="donate" target="_blank">Donate</a></li>
+    </ul>
   </div>
 
 
