--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="grid__item large--one-third logo">
           <h1>
             <a href="index.html" class="logo"><span class="loot">Loot</span><span class="junkie">Junkie</span></a>
-            <span class="version">reflecting patch 1.5.0</span>
+            <span class="version">reflecting patch 1.10.0</span>
           </h1>
       </div>
       <div class="grid__item large--two-thirds medium-down--hide nav">
@@ -71,6 +71,13 @@
         <div class="note"><i class="fa fa-twitter" aria-hidden="true"></i> We have a dedicated twitter now! Follow <a href="https://twitter.com/lootjunkiexyz" target="_blank">@LootJunkiexyz</a></div>
       </div>
     </div>
+    
+    <ul class="mobile-nav">
+      <li><a href="about.html">About</a></li>
+      <li><a href="changelog.html">Changelog</a></li>
+      <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
+      <li><a href="https://streamtip.com/t/omgmrm" class="donate" target="_blank">Donate</a></li>
+    </ul>
   </div>
 
 </body>
