--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
     <div class="grid--full">
       <div class="grid__item center">
         <a class="btn yellow" onclick="openBox()" onmouseover="shakeBox()">OPEN LOOT BOX</a>
-        <a class="btn blue" href="https://us.battle.net/shop/en/product/overwatch-loot-box" target="_blank">INVENTORY <i class="fa fa-plus-circle" aria-hidden="true"></i></a>
+        <a class="btn blue btn-toggle" href="#">INVENTORY <i class="toggle fa fa-plus-circle" aria-hidden="true"></i></a>
       </div>
       
       <div class="grid__item center">
-        <ul id="itemlog">
+        <ul id="itemlog" style="display: none;">
         </ul>
       </div>
 
       <div class="grid__item center">
-        <div class="note"><i class="fa fa-twitter" aria-hidden="true"></i> We have a dedicated twitter now! Follow <a href="https://twitter.com/lootjunkiexyz" target="_blank">@LootJunkiexyz</a></div>
+        <div class="note"><i class="fa fa-flask" aria-hidden="true"></i> We are currently implementing a <strong>beta</strong> for session-based inventory. </div>
       </div>
     </div>
     
