--- a/index.html
+++ b/index.html
@@ -33,11 +33,8 @@
 <header>
   <nav>
     <div class="grid">
-      <div class="grid__item large--one-third logo">
-          <h1>
-            <a href="index.html" class="logo"><span class="loot">Loot</span><span class="junkie">Junkie</span></a>
-            <span class="version">reflecting patch 1.10.0</span>
-          </h1>
+      <div class="grid__item large--one-third">
+            <a href="index.html" class="logo"><img src="images/logo.svg"></a>
       </div>
       <div class="grid__item large--two-thirds medium-down--hide nav">
       	<ul>
