--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <div class="small-wrapper">
     <div class="grid--full">
-      <div class="grid__item center">
+      <div class="grid__item center mobile-wrap">
         <a class="btn yellow" onclick="openBox()" onmouseover="shakeBox()">Open Loot Box</a>
         <a class="btn blue btn-toggle" href="#">Item Log <i class="toggle fa fa-plus-circle" aria-hidden="true"></i></a>
       </div>
@@ -70,18 +70,18 @@
       </div>
 
       <div class="grid__item center stats">
-        <div class="grid center">
+        <div class="grid center mobile-wrap">
 
-          <div class="grid__item one-quarter small--one-whole">
+          <div class="grid__item one-quarter small--one-half">
             <p>Normal:  <span id="white-stat">0</span></p>
           </div>
-          <div class="grid__item one-quarter small--one-whole">
+          <div class="grid__item one-quarter small--one-half">
             <p>Rare:  <span id="blue-stat">0</span></p>
           </div>
-          <div class="grid__item one-quarter small--one-whole">
+          <div class="grid__item one-quarter small--one-half">
             <p>Epic:  <span id="purple-stat">0</span></p>
           </div>
-          <div class="grid__item one-quarter small--one-whole">
+          <div class="grid__item one-quarter small--one-half">
             <p>Legendary:  <span id="orange-stat">0</span></p>
           </div>
         </div>
