--- a/about.html
+++ b/about.html
@@ -32,10 +32,7 @@
   <nav>
     <div class="grid">
       <div class="grid__item large--one-third logo">
-        <h1>
-          <a href="index.html" class="logo"><span class="loot">Loot</span><span class="junkie">Junkie</span></a>
-          <span class="version">reflecting patch 1.10.0</span>
-        </h1>
+        <a href="index.html" class="logo"><img src="images/logo.svg"></a>
       </div>
       <div class="grid__item large--two-thirds medium-down--hide nav">
       	<ul>
@@ -79,7 +76,7 @@
       </div>
 
     </div>
-    
+
     <ul class="mobile-nav">
       <li><a href="about.html">About</a></li>
       <li><a href="changelog.html">Changelog</a></li>
