--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="grid--full">
       <div class="grid__item center mobile-wrap">
         <a class="btn yellow" onclick="openBox()" onmouseover="shakeBox()">Open Loot Box</a>
-        <a id="generate" class="btn blue btn-toggle" href="#">Item Log <i class="toggle fa fa-plus-circle" aria-hidden="true"></i></a>
+        <a id="generate" class="generate btn blue btn-toggle" href="#">Item Log <i class="toggle fa fa-plus-circle" aria-hidden="true"></i></a>
       </div>
 
       <div class="grid__item center">
