--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="small-wrapper">
     <div class="grid--full">
       <div class="grid__item center mobile-wrap">
-        <a class="btn yellow" onclick="openBox()" onmouseover="shakeBox()">Open Loot Box</a>
-        <a id="generate" class="generate btn blue btn-toggle" href="#">Item Log <i class="toggle fa fa-plus-circle" aria-hidden="true"></i></a>
+        <a class="btn yellow" onclick="openBox();dataLayer.push({'event': 'button1-click'});" onmouseover="shakeBox()">Open Loot Box</a>
+        <a class="btn blue btn-toggle" href="#">Item Log <i class="toggle fa fa-plus-circle" aria-hidden="true"></i></a>
       </div>
 
       <div class="grid__item center">
