--- a/index.html
+++ b/index.html
@@ -28,20 +28,9 @@
   ga('send', 'pageview');
 
 </script>
-
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-P723K9B');</script>
-<!-- End Google Tag Manager -->
 </head>
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P723K9B"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+
 
 <header>
   <nav>
@@ -73,7 +62,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="small-wrapper">
     <div class="grid--full">
       <div class="grid__item center mobile-wrap">
-        <a class="btn yellow generate" onclick="openBox();dataLayer.push({'event': 'button1-click'});" onmouseover="shakeBox()">Open Loot Box</a>
+        <a class="btn yellow generate" onclick="openBox();ga(‘send’, ‘event’, ‘ Generate box’, ‘Click’, ‘Open loot box’)" onmouseover="shakeBox()">Open Loot Box</a>
         <a class="btn blue btn-toggle" href="#">Item Log <i class="toggle fa fa-plus-circle" aria-hidden="true"></i></a>
       </div>
 
