Fixed ga tracking

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="small-wrapper">
     <div class="grid--full">
       <div class="grid__item center mobile-wrap">
-        <a class="btn yellow generate" onclick="openBox(); ga(‘send’, ‘event’, ‘ Generate box’, ‘Click’, ‘Open loot box’);" onmouseover="shakeBox()">Open Loot Box</a>
+        <a class="btn yellow generate" onclick="openBox(); ga('send', 'event', 'Generate box', 'Click', 'Open loot box');" onmouseover="shakeBox()">Open Loot Box</a>
         <a class="btn blue btn-toggle" href="#">Item Log <i class="toggle fa fa-plus-circle" aria-hidden="true"></i></a>
       </div>
 
