--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@
 
     </div>
 
+    <div class="grid--full center sponsored medium-down--hide">
+     <a href="http://www.anrdoezrs.net/click-8370060-12559379" target="_top">
+     <img src="http://www.ftjcfx.com/image-8370060-12559379" width="728" height="90" alt="GreenMan Gaming" border="0"/></a>
+    </div>
+
+    <div class="grid--full center sponsored mobile">
+      <a href="http://www.tkqlhce.com/click-8370060-12913403" target="_top">
+      <img src="http://www.ftjcfx.com/image-8370060-12913403" width="200" height="200" alt="" border="0"/></a>
+    </div>
+
     <ul class="mobile-nav">
       <li><a href="about.html">About</a></li>
       <li><a href="changelog.html">Changelog</a></li>
