--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type=text/css>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Raleway:400,600,700' rel='stylesheet' type='text/css'>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script type="text/javascript" src="js/chance.js"></script>
-<script type="text/javascript" src="js/loot.js"></script>
-<script type="text/javascript" src="js/spec-loot.js"></script>
-<script type="text/javascript" src="js/engine.js"></script>
+<script src="js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/chance.min.js"></script>
+<script type="text/javascript" src="js/loot.min.js"></script>
+<script type="text/javascript" src="js/spec-loot.min.js"></script>
+<script type="text/javascript" src="js/engine.min.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
