--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
 <link rel="icon" type="image/png" href="favicon.png">
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <link href="css/animate.css" rel="stylesheet" type="text/css">
+<link href="css/slick.css" rel="stylesheet" type="text/css">
+<link href="css/slick-theme.css" rel="stylesheet" type="text/css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type=text/css>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Raleway:400,600,700' rel='stylesheet' type='text/css'>
-<script src="js/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="js/chance.min.js"></script>
-<script type="text/javascript" src="js/loot.min.js"></script>
-<script type="text/javascript" src="js/spec-loot.min.js"></script>
-<script type="text/javascript" src="js/engine.min.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -54,7 +51,7 @@
     <div class="grid">
       <div class="grid__item item-section">
         <img id="box" src="images/loot-box.png" alt="Loot Box">
-        <ul id="crate"></ul>
+        <ul id="crate" class="add-remove"></ul>
       </div>
     </div>
   </div>
@@ -108,6 +105,11 @@
       <li><a href="https://streamtip.com/t/omgmrm" class="donate" target="_blank">Donate</a></li>
     </ul>
   </div>
-
+<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/slick.min.js"></script>
+<script type="text/javascript" src="js/chance.min.js"></script>
+<script type="text/javascript" src="js/loot.min.js"></script>
+<script type="text/javascript" src="js/spec-loot.min.js"></script>
+<script type="text/javascript" src="js/engine.js"></script>
 </body>
 </html>
