Minified and improved slider

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <meta name="robots" content="index,follows" />
 <title>LootJunkie | Overwatch Loot Box Simulator</title>
 <link rel="icon" type="image/png" href="favicon.png">
-<link href="css/style.css" rel="stylesheet" type="text/css" />
-<link href="css/animate.css" rel="stylesheet" type="text/css">
-<link href="css/slick.css" rel="stylesheet" type="text/css">
-<link href="css/slick-theme.css" rel="stylesheet" type="text/css">
+<link href="css/style.min.css" rel="stylesheet" type="text/css" />
+<link href="css/animate.min.css" rel="stylesheet" type="text/css">
+<link href="css/slick.min.css" rel="stylesheet" type="text/css">
+<link href="css/slick-theme.min.css" rel="stylesheet" type="text/css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type=text/css>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Raleway:400,600,700' rel='stylesheet' type='text/css'>
@@ -105,6 +105,6 @@
 <script type="text/javascript" src="js/chance.min.js"></script>
 <script type="text/javascript" src="js/loot.min.js"></script>
 <script type="text/javascript" src="js/spec-loot.min.js"></script>
-<script type="text/javascript" src="js/engine.js"></script>
+<script type="text/javascript" src="js/engine.min.js"></script>
 </body>
 </html>
