--- a/index.html
+++ b/index.html
@@ -99,9 +99,13 @@
       <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
       <li><a href="https://streamtip.com/t/omgmrm" class="donate" target="_blank">Donate</a></li>
     </ul>
+
+    <div class="grid--full center sponsored mobile">
+          <a href="http://www.tkqlhce.com/click-8370060-12913403" target="_top" onclick="ga('send', 'event', 'Affiliate', 'Click', 'GMG');">
+          <img src="http://www.ftjcfx.com/image-8370060-12913403" width="200" height="200" alt="" border="0"/></a>
+        </div>
   </div>
 <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="js/slick.min.js"></script>
 <script type="text/javascript" src="js/chance.min.js"></script>
 <script type="text/javascript" src="js/loot.min.js"></script>
 <script type="text/javascript" src="js/spec-loot.min.js"></script>
