--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </header>
 <div class="alert">
   <i class="fa fa-times close" aria-hidden="true"></i>
-  <p>We're pleased to announce our new <a href="hearthstone/index.html">Hearthstone pack simulator!</a> Tweet us feedback <a href="https://twitter.com/lootjunkiexyz" target="_blank">@lootjunkie.xyz</a></p>
+  <p>We're pleased to announce our new <a href="hearthstone/index.html">Hearthstone pack simulator beta!</a> Tweet us feedback <a href="https://twitter.com/lootjunkiexyz" target="_blank">@lootjunkie.xyz</a></p>
 </div>
 
   <div class="grid--full darken">
