--- a/hearthstone/index.html
+++ b/hearthstone/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta name="description" content="LootJunkie is an Overwatch loot box simulator where you can open Overwatch loot boxes for free!" />
-<meta name="keywords" content="overwatch,over watch,overwatch loot,overwatch loot box,simulator,overwatch simulator,overwatch loot simulator,overwatch loot box simulator,loot junkie,lootjunkie,loot junky" />
+<meta name="description" content="LootJunkie is a loot box simulator where you can open loot boxes for free!" />
+<meta name="keywords" content="overwatch,over watch,overwatch loot,overwatch loot box,simulator,overwatch simulator,overwatch loot simulator,overwatch loot box simulator,loot junkie,lootjunkie,loot junky, hearthstone,over watch,hearthstone loot,hearthstone loot box,simulator,hearthstone simulator,hearthstone loot simulator,hearthstone loot box simulator" />
 <meta name="robots" content="index,follows" />
 <title>LootJunkie | Overwatch Loot Box Simulator</title>
 <link rel="icon" type="image/png" href="favicon.png">
@@ -59,7 +59,7 @@
   <div class="wrapper">
     <div class="grid">
       <div class="grid__item item-section">
-        <img id="box" src="images/pack.png" alt="Loot Box" onclick="openBox(); ga('send', 'event', 'Generate box', 'Click', 'Open loot box');">
+        <img id="box" src="images/pack.png" alt="Loot Box" onclick="openBox(); ga('send', 'event', 'Generate Pack', 'Click', 'Open loot box HS');">
         <ul id="crate" class="add-remove"></ul>
       </div>
     </div>
