--- a/hearthstone/index.html
+++ b/hearthstone/index.html
@@ -95,6 +95,7 @@
         </div>
   </div>
 <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/slick.min.js"></script>
 <script type="text/javascript" src="js/chance.min.js"></script>
 <script type="text/javascript" src="js/loot.min.js"></script>
 <script type="text/javascript" src="js/spec-loot.min.js"></script>
