--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       </div>
       <div class="grid__item large--two-thirds medium-down--hide nav">
       	<ul>
+          <li><a href="overwatch/index.html">Overwatch</a></li>
+          <li><a href="hearthstone/index.html">Hearthstone</a></li>
           <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
           <li><a href="https://streamtip.com/t/omgmrm" class="donate" target="_blank">Donate</a></li>
         </ul>
@@ -42,21 +44,60 @@
     </div>
   </nav>
 </header>
-<div class="alert">
-  <i class="fa fa-times close" aria-hidden="true"></i>
-  <p>We're pleased to announce our new <a href="hearthstone/index.html">Hearthstone pack simulator beta!</a> Tweet us feedback <a href="https://twitter.com/lootjunkiexyz" target="_blank">@lootjunkie.xyz</a></p>
-</div>
 
-  <div class="grid--full darken">
-    <div class="grid__item one-half left">
-      <a href="overwatch/index.html" ><img src="images/ow-btn.jpg" alt="Overwatch" class="navbtn"></a>
-    </div>
-    <div class="grid__item one-half left">
-      <a href="hearthstone/index.html" ><img src="images/hs-btn.jpg" alt="Hearthstone" class="navbtn"></a>
-    </div>
-  </div>
+  <div class="wrapper bump">
+    <div class="grid">
+      <div class="grid__item large--two-thirds small--one-whole">
+        <div class="hero-slide">
+          <div>
+            <a href="hearthstone/index.html"><img src="images/slide-ungoro.png"></a>
+          </div>
+          <div>
+            <a href="overwatch/index.html"><img src="images/slide-overhaul.png"></a>
+          </div>
+        </div>
 
-  <div class="wrapper">
+        <div class="grid bump afterbump">
+          <div class="grid__item large--one-half small--one-whole">
+            <a href="overwatch/index.html"><img class="fill" src="images/btn-ow.png"></a>
+          </div>
+          <div class="grid__item large--one-half small--one-whole">
+            <a href="hearthstone/index.html"><img class="fill" src="images/btn-hs.png"></a>
+          </div>
+        </div>
+
+        <div class="grid--full content">
+          <div class="grid__item one-whole">
+            <div class="grid">
+              <div class="grid__item one-half">
+                <h3>Latest Overwatch discussion</h3>
+                <script src="https://www.reddit.com/r/Overwatch/.embed?limit=3&t=day&bordercolor=efefef&bgcolor=efefef" type="text/javascript"></script>
+              </div>
+              <div class="grid__item one-half">
+                <h3>Latest Overwatch discussion</h3>
+                <script src="https://www.reddit.com/r/hearthstone/.embed?limit=3&t=day&bordercolor=efefef&bgcolor=efefef" type="text/javascript"></script>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="grid__item large--one-third small--one-whole darken">
+        <div class="content">
+          <h1>Welcome to LootJunkie</h1>
+          <p>LootJunkie is a loot box simulator where you can open loot boxes from your favorite games for free!</p>
+          <p>Want to stay up to date with everything LootJunkie?<br>Follow us on Twitter!</p>
+          <a href="" target="_blank" class="blue btn"><i class="fa fa-twitter" aria-hidden="true"></i> @Lootjunkiexyz</a>
+          <h2>Latest Changes</h2>
+          <ul>
+            <li>Improved mobile experiences</li>
+            <li>Added Hearthstone beta</li>
+            <li>Design overhaul</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
 
     <ul class="mobile-nav">
       <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
@@ -65,6 +106,7 @@
 
   </div>
 <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/slick.min.js"></script>
 <script type="text/javascript" src="js/engine.min.js"></script>
 </body>
 </html>
