--- a/hearthstone/index.html
+++ b/hearthstone/index.html
@@ -44,8 +44,8 @@
       </div>
       <div class="grid__item large--two-thirds medium-down--hide nav">
       	<ul>
-          <li><a href="overwatch/index.html">Overwatch</a></li>
-          <li><a href="hearthstone/index.html">Hearthstone</a></li>
+          <li><a href="../overwatch/index.html">Overwatch</a></li>
+          <li><a href="../hearthstone/index.html">Hearthstone</a></li>
           <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
           <li><a href="https://streamtip.com/t/omgmrm" class="donate" target="_blank">Donate</a></li>
         </ul>
