--- a/overwatch/index.html
+++ b/overwatch/index.html
@@ -42,7 +42,7 @@
             </li>
           </ul>
         </div>
-        <a href="index.html" class="logo"><img src="images/logo.svg"></a>
+        <a href="../index.html" class="logo"><img src="images/logo.svg"></a>
       </div>
       <div class="grid__item large--two-thirds medium-down--hide nav">
       	<ul>
