--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
         <div class="grid--full content">
           <div class="grid__item one-whole">
             <div class="grid">
-              <div class="grid__item one-half">
+              <div class="grid__item large--two-thirds small--one-whole">
                 <h3>Latest Overwatch discussion</h3>
                 <script src="https://www.reddit.com/r/Overwatch/.embed?limit=3&t=day&bordercolor=efefef&bgcolor=efefef" type="text/javascript"></script>
               </div>
-              <div class="grid__item one-half">
+              <div class="grid__item large--two-thirds small--one-whole">
                 <h3>Latest Overwatch discussion</h3>
                 <script src="https://www.reddit.com/r/hearthstone/.embed?limit=3&t=day&bordercolor=efefef&bgcolor=efefef" type="text/javascript"></script>
               </div>
