--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <section class="news">
     <div class="wrapper">
-      <a href="#" class="twitter" target="_blank">@LootJunkiexyz:</a>
+      <a href="https://twitter.com/lootjunkiexyz" class="twitter" target="_blank">@LootJunkiexyz:</a>
       <div id="alert"></div>
     </div>
   </section>
@@ -51,6 +51,14 @@
         <a class="btn yellow generate" onclick="openBox(); ga('send', 'event', 'Generate box', 'Click', 'Open loot box');" onmouseover="shakeBox()">Open Loot Box</a>
       </div>
     </div>
+
+    <footer>
+      <ul>
+        <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
+        <li><a href="mailto:hello@matou.io" target="_blank">Email</a></li>
+        <li><a href="https://streamtip.com/t/omgmrm" target="_blank">Donate</a></li>
+      </ul>
+    </footer>
 
   </div>
   <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
