Twitter feed for mobile

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
       </div>
     </div>
 
+    <div class="grid large--hide">
+      <div class="grid__item">
+        <div id="mobilealert"></div>
+      </div>
+    </div>
+
     <footer>
       <ul>
         <li><a href="https://twitter.com/lootjunkiexyz" target="_blank">Twitter</a></li>
