--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     </nav>
   </header>
 
-  <section class="news">
+  <!--<section class="news">
     <div class="wrapper">
       <a href="https://twitter.com/lootjunkiexyz" class="twitter" target="_blank">@LootJunkiexyz:</a>
       <div id="alert"></div>
     </div>
-  </section>
+  </section> -->
 
   <div class="wrapper">
 
