Disabled twitter mboile

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       </div>
     </div>
 
-    <div class="grid large--hide">
+    <!--<div class="grid large--hide">
       <div class="grid__item">
         <div id="mobilealert"></div>
       </div>
-    </div>
+    </div> -->
 
     <footer>
       <ul>
