--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     </nav>
   </header>
 
-  <!--<section class="news">
+  <section class="news">
     <div class="wrapper">
       <a href="https://twitter.com/lootjunkiexyz" class="twitter" target="_blank">@LootJunkiexyz:</a>
       <div id="alert"></div>
     </div>
-  </section> -->
+  </section>
 
   <div class="wrapper">
 
@@ -52,11 +52,11 @@
       </div>
     </div>
 
-    <!--<div class="grid large--hide">
+    <div class="grid large--hide">
       <div class="grid__item">
         <div id="mobilealert"></div>
       </div>
-    </div> -->
+    </div>
 
     <footer>
       <ul>
